se agrega mas doc

--- a/README
+++ b/README
@@ -1,6 +1,6 @@
 SoffHeap
 
-A solution to store large set of objects out of the Java heap space using sun.misc.Unsafe to minimize GC overhead. 
+A simple library to store large set of objects out of the Java heap space using sun.misc.Unsafe to minimize GC overhead. 
 
 Usage (Scala)
 
@@ -23,9 +23,9 @@ Usage (Java)
 
 SoffHeapMap<String,SomeObject> soffHeapMap = new SoffHeapMapBuilder<String,SomeObject>().buildJ(); //Use buildJ for plan Java access
 
-soffHeapMap.put("key1", SomeObject()) //the object is moved out of the heap
+soffHeapMap.put("key1", new SomeObject()); //the object is moved out of the heap
 
-val someObjectFromOffheap = soffHeapMap.get("key1")
+SomeObject someObjectFromOffheap = soffHeapMap.get("key1"); 
 
 
 Add the following dependency to your pom.xml (Maven):
@@ -59,23 +59,48 @@ Usage (Spring)
 
 </beans>
 
+Configuration
+
+By default SoffHeap sets a limit of 2GB in the maximum amount of memory that can be allocated to store objects. This limit can be modified by passing a VM parameter.
+
+Example: 
+
+java -DmaximumSoffHeapMemoryInGB=4 SomeMain
+
+
+Tunings
+
+Hinted classes. The serializers used by SoffHeap can be tuned if necessary passing the types involved in serialization/deserialization of your objects.
+
+SoffHeapMapBuilder[String,SomeComplexObject]().withHintedClass(classOf[SomeComplexObject]).withHintedClass(classOf[SomeOtherClass])...
+
+Heap cache. Frequent accesses to objects can be optimized by enabling an LRU cache in the heap. Maximum heap elements can be configured.
+
+SoffHeapMapBuilder[String,SomeComplexObject]().withMaximumHeapElements(10)
 
 Implementation details
 
 Built in Scala.
-It uses reference counting to free unused objects. 
-HeapCache
+It uses Reference Counting to free unused objects. 
+LRU Heap Cache
 Kryo and FST serialization 
 Metrics statistics.
 Disk persistence.
 Scheduled reloads.
 Basic spring support.
 
+Monitoring
+
+SoffHeap exposes a set of metrics that can be used to monitor its behavior. By default a JMX exporter is used. Other monitoring solutions can be used by setting Codahale Metrics reporters to the SoffHeap MetricsRegistry.
+
+Metrics
+
+//to complete
 
 Limitations
 
 The first implementation only supports a keyvalue store.
-Only supports sun.misc.Unsafe. Fallback to directMemory is pending.
+Only supports sun.misc.Unsafe. Fallback to DirectBuffer usage is pending.
 No TTL support.
 
 
